--- a/src/scss/components/_social.scss
+++ b/src/scss/components/_social.scss
@@ -7,7 +7,9 @@
         }
     }
     &__icon {
-        width: 15px;
-        height: 15px;
+        color: $WHITE;
+        @include hover() {
+            color: $DARKENBLUE;
+        }
     }
 }
