--- a/src/scss/core/_vars.scss
+++ b/src/scss/core/_vars.scss
@@ -5,6 +5,7 @@ $LIGHTENBLACK:#232323;
 $DARKENBLUE: #5474fd;
 $cayen: #5585a2;
 
+$HOVER-COLOR: #496BFE;
 $BUTTON-COLOR: $DARKENBLUE;
 $P-HOLDER-COLOR: #999999;
 $FONT-COLOR: #e8e8e8;
