--- a/src/templates/double-section.html
+++ b/src/templates/double-section.html
@@ -1,5 +1,5 @@
+<a class="anchor" name='travel with us'></a>
 <section class="double-section double-section__container">
-    <a name='travel with us'></a>
     <div class="double-section__interior">
         <div class="container">
         <div class="box double-section__box">
