--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,32 +1,32 @@
-<section class="footer footer__container">
-    <a name='contact us'></a>
-    <div class="container">
-        <a class="logo footer__logo" href="#home">Bhromaon</a>
+<a class="anchor" name='footer'></a>
+<section class="footer">
+    <div class="container footer__container">
+        <a class="logo footer__logo" href="https://amonchik8.github.io/exam/">Bhromaon</a>
         <h3 class="footer__subtitle">Safe Travel Anywhere</h3>
         <ul class="social">
             <li class="social__item">
                 <a class="" href="https://www.facebook.com/">
-                    <img class="social__icon" src="./assets/svg/facebook.svg" alt="facebook">
+                    <i class="social__icon fa fa-facebook fa-spin" aria-hidden="true"></i>
                 </a>
             </li>
                 <li class="social__item">
             <a class="" href="https://twitter.com/">
-                    <img class="social__icon" src="./assets/svg/twitter.svg" alt="twitter">
+                    <i class="social__icon fa fa-twitter fa-spin" aria-hidden="true"></i>
                 </a>
                 </li>
                 <li class="social__item">
                 <a class="" href="https://linkedin.com/">
-                    <img class="social__icon" src="./assets/svg/linkedin.svg" alt="linkedin">
+                    <i class="social__icon fa fa-linkedin fa-spin" aria-hidden="true"></i>
                 </a>
                 </li>
                 <li class="social__item">
                 <a class="" href="https://youtube.com/">
-                    <img class="social__icon" src="./assets/svg/youtube.svg" alt="youtube">
+                    <i class="social__icon fa fa-youtube-play fa-spin" aria-hidden="true"></i>
                 </a>
                 </li>
                 <li class="social__item">
                 <a class="" href="https://pinterest.com/">
-                    <img class="social__icon" src="./assets/svg/pinterest.svg" alt="pinterest">
+                    <i class="social__icon fa fa-pinterest fa-spin" aria-hidden="true"></i>
                 </a>
                 </li>
             </li>
