--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -1,54 +1,61 @@
 .form {
-   @include flex-col(center, center);
+   @include flex(center, stretch, column);
    @include media() {
    @include flex(center, center, row);
    }
-    margin-bottom: 120px;
+    margin-bottom: 50px;
+    min-width: 100%;
+    @include media() {
+        margin-bottom: 120px;
+        width: 650px;
+    }
     &__input {
-        max-width: 250px;
+        display: inline;
         margin-bottom: 10px;
-        @include media() {
-            margin-bottom: 0;
-        }
-        width: 100%;
         border: none;
         outline: none;
-        padding: 22px 10px;
+        padding: 22px 30px;
+        font-family: $BASE-FONT;
         @include placeholder{
-           @include text($H10, 400, $P-HOLDER-COLOR);
-           @include media() {
-            @include text($H14, 400, $P-HOLDER-COLOR);
-           }
-            font-family: $BASE-FONT;
+           @include text($H14, 400, $P-HOLDER-COLOR);
             text-align: center;
+            letter-spacing: normal;
+           @include media($screen-iphone-plus) {
             letter-spacing: 2.8px;
+                
+           }
         }
         @include media() {
+            width: 500px; 
+            margin-bottom: 0;
             padding: 22px 110px;
-            max-width: 500px;
         }
     }
     &__button {
-        max-width: max-content;
-        min-width: 250px;
+        min-width: 100%;
         @include media() {
             min-width: 150px;
         }
         cursor: pointer;
         @include flex(center, center, row, nowrap);
-        padding: 18px 19px 18px 38px;
+        padding: 18px 16px 18px 35px;
         @include text($H14, 400, $WHITE);
         font-family: $SECONDARY-FONT;
-        //line-height: 26px;
         text-transform: uppercase;
         letter-spacing: 1.4px;
         background-color: $BUTTON-COLOR;
         border: 2px solid $WHITE;
-        @include media() {
-            
+        transition: background-color;
+        transition-duration: 0.2s;
+        transition-timing-function: ease;
+        @include hover() {
+            background-color: lighten($BUTTON-COLOR, 5%);
+        }
+        &:active {
+            background-color: darken($BUTTON-COLOR, 5%);
         }
     }
     &__button-image {
-        margin-left: 15px;
+        margin-left: 10px;
     }
 }
