--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,10 +1,15 @@
 .header {
+    @include flex(center, stretch, column, nowrap);
     background-image: url(../assets/images/header.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    height: 100vh;
     &__container {
-        padding-top: 265px;
+        padding-top: 96px;
+        @include media() {
+           padding-top: 265px;
+        }
     }
     &__title {
         margin-bottom: 15px;
@@ -17,16 +22,24 @@
         margin-bottom: 50px;
     }
     &__nav-wrapper {
-        @include flex;
-        justify-content: space-between;
-        padding: 30px 24px;
-        margin: 0 auto;
-        max-width: 1110px - 24px * 2;
+        @include flex(space-between, center);
+        padding: 15px 24px;
+        @include media() {
+            padding: 30px 0;  
+        }
+        margin: 0 0;
+        //margin: 0 auto;
+       // max-width: 1110px + 24px * 2;
     }
     &__menu {
         background-color: $DARKENBLUE;
+        @include media() {
+            padding: 0 24px;
+        }
+        
     }
     &__logo {
-        align-self: center;
+        position: relative;
+        top: 2px;
     }
 }
