--- a/src/scss/components/_image-box.scss
+++ b/src/scss/components/_image-box.scss
@@ -1,33 +1,42 @@
 .image-box {
-    @include flex-col;
-    max-width: 475px;
-    flex-basis: 50%;
-    &__item-1 {
-    background-image: url(../assets/images/whychoose-1.png);
+    @include media($screen-desktop-large) {
+        display: block;
+        max-width: 465px;
+    }
+    max-width: 350px;
+    width: 100%;
+    &__item {
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
-    height: 120px;
+    height: 240px;
     max-width: 350px;
-    margin-bottom: 3px;
-    @include media() {
+    transition: 0.6s;
+    @include hover() {
+        transform: scale(1.1);
+        @include media($screen-desktop-large) {
+            transform: scale(1.2);
+        }
+    }
+    &:not(:last-of-type) {
+        margin-bottom: 5px;
+    }  
+    &--1 {
+        background-image: url(../assets/images/whychoose-1.png);
+            @include media($screen-desktop-large) {
+            margin-right: 125px;
+            }
+        }
+    &--2 {
+        background-image: url(../assets/images/whychoose-2.png);
+        @include media($screen-desktop-large) {
+            margin-left: 125px;
+        }
+        }
+        @include media() {
         height: 220px;
         max-width: 350px;
         background-size: cover;
+        }
     }
-    }
-    &__item-2 {
-    background-image: url(../assets/images/whychoose-2.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    height: 120px;
-    max-width: 350px;
-    margin-bottom: 3px;
-    @include media() {
-        height: 220px;
-        max-width: 350px;
-        background-size: cover;
-    }
-}
 }
