--- a/src/scss/components/_quote-section.scss
+++ b/src/scss/components/_quote-section.scss
@@ -3,15 +3,24 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    &--quote {
+        color: $DARKENBLUE;
+        font-size: 20px;
+        position: relative;
+        bottom: 12px;
+    }
     &__container {
-        padding: 120px 24px 200px;
+        @include media() {
+            padding: 120px 24px 200px;
+        }
+        padding: 60px 24px 100px;
     }
     &__main {
         background-color: $BG-SECTION-COLOR;
-        @include flex;
-    }
-    &__column {
-        flex-basis: 50%;
+        @include flex(center, center, column, wrap);
+        @include media() {
+            @include flex;
+        }
     }
     &__title {
         margin-bottom: 94px;
@@ -20,16 +29,27 @@
         line-height: 1.6;
         text-align: center;
         text-transform: none;
+        letter-spacing: normal;
     }
     &__box {
-        padding: 50px 60px;
-        max-width: 552px;
+        @include media() {
+            padding: 50px 60px 0;
+        }
+        padding: 20px 24px 0;
+        max-width: 720px;
     }
     &__image {
-        background-image: url(../assets/images/quote.png);
-        height: 100%;
-        background-repeat: no-repeat;
+        @include media() {
+        height: auto;
         background-size: cover;
+        margin: 0;
+        }
+        background-image: url(../assets/images/quote.png);
+        height: 184px;
+        width: 100%;
+        margin-top: 20px;
+        background-size: contain;
+        background-repeat: no-repeat;
         background-position: center;
     }
 }
