--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,35 +1,36 @@
+<a class="anchor" name='home'></a>
 <header class="header header__container">
-  <a name='home'></a>
-  <div class="container">
+  <div class="container container--header">
   <h2 class="title header__title">bhromaon</h2>
   <p class="header__subtitle">Safe Travel Anywhere</p>
   <form class="form" action="">
-  <input class="form__input" placeholder="Search Your Travel Destination" type="text">
+  <input required class="form__input" placeholder="Search Your Travel Destination" type="text">
   <button class="form__button">search
     <img class="form__button-image" src="./assets/svg/search.svg" alt="search">
   </button>
   </form>
-  <a class="scroll header__scroll" href="#who we are">Scroll Down</a>
-  <a class="scroll__icon" href="#who we are">
+  <a class="scroll header__scroll" href="#why-section">Scroll Down</a>
+  <a class="scroll__icon" href="#why-section">
     <img src="./assets/svg/scroll-icon.svg" alt="scroll down">
   </a>
   </div>
   <div class="header__menu">
+    <div class="container">
   <div class="header__nav-wrapper">
-    <a class="logo header__logo" href="/">bhromaon</a>
+    <a class="logo header__logo" href="https://amonchik8.github.io/exam/">bhromaon</a>
     <nav>
    <ul class="nav">
     <li class="nav__item">
-        <a class="nav__item-anchor" href="#who we are">who we are</a>
+        <a class="nav__item-anchor" href="#why-section">who we are</a>
     </li>
     <li class="nav__item">
-        <a class="nav__item-anchor" href="#what we do">what we do</a>
+        <a class="nav__item-anchor" href="#panel-section">what we do</a>
     </li>
     <li class="nav__item">
-        <a class="nav__item-anchor" href="#travel with us">travel with us</a>
+        <a class="nav__item-anchor" href="#country-section">travel with us</a>
     </li>
     <li class="nav__item">
-        <a class="nav__item-anchor" href="#contact us">contact us</a>
+        <a class="nav__item-anchor" href="#footer">contact us</a>
     </li>
    </ul>
    <label class="mobile-menu">
@@ -40,21 +41,22 @@
     <span class="mobile-menu__box"> 
     <span class="mobile-menu__list">
         <span class="mobile-menu__item">
-         <a class="nav__item-anchor--mobile" href="#who we are">who we are</a>
+         <a class="nav__item-anchor--mobile" href="#why-section">who we are</a>
         </span>
         <span class="mobile-menu__item">
-         <a class="nav__item-anchor--mobile" href="#what we do">what we do</a>
+         <a class="nav__item-anchor--mobile" href="#panel-section">what we do</a>
         </span>
         <span class="mobile-menu__item">
-         <a class="nav__item-anchor--mobile" href="#travel with us">travel with us</a>
+         <a class="nav__item-anchor--mobile" href="#country-section">travel with us</a>
         </span>
         <span class="mobile-menu__item">
-         <a class="nav__item-anchor--mobile" href="#contact us">contact us</a>
+         <a class="nav__item-anchor--mobile" href="#footer">contact us</a>
         </span>
     </span>
     </span>
      </label>
      </nav>
-     </div>
+  </div>
+    </div>
 </div>
 </header>
