--- a/src/templates/panel-section.html
+++ b/src/templates/panel-section.html
@@ -1,20 +1,23 @@
+<a class="anchor" name='panel-section'></a>
 <section class="panel-section panel-section__container">
-    <a name='what we do'></a>
     <div class="container--panel-section">
         <div class="panel-section__main">
-        <div class="icon-box">
+            <img class="panel-section__img" src="./assets/svg/duga.svg" alt="">
+        <div class="icon-box__wrapper">
+            <div class="icon-box">
             <svg class="icon-box__icon icon-box__icon--search">
                 <use href='#icon-search'></use>>
             </svg>
             <h3 class="icon-box__title">Search Places</h3>
-        </div>
-        <div class="icon-box">
+            </div>
+            <div class="icon-box">
             <img class="icon-box__icon" src="./assets/svg/okay.svg" alt="select">
             <h3 class="icon-box__title">Select Places</h3>
-        </div>
-        <div class="icon-box">
+            </div>
+            <div class="icon-box">
             <img class="icon-box__icon" src="./assets/svg/klass.svg" alt="enjoy">
             <h3 class="icon-box__title">Book & Enjoy</h3>
+            </div>
         </div>
         </div>
     </div>
