--- a/src/scss/components/_scroll.scss
+++ b/src/scss/components/_scroll.scss
@@ -1,13 +1,14 @@
 .scroll {
+    max-width: 106px;
+    margin: 0 auto;
     @include text($H14, 400,$WHITE);
     font-family: $BASE-FONT;
     text-align: center;
     letter-spacing: 2.8px;
     margin-bottom: 15px;
-    @include flex-col(center, center);
     &__icon {
-        display: block;
-        text-align: center;
+        max-width: 10px;
+        margin: 0 auto;
         justify-content: center;
         margin-bottom: 15px;
     }
