--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,7 +1,7 @@
 <a class="anchor" name='footer'></a>
 <section class="footer">
     <div class="container footer__container">
-        <a class="logo footer__logo" href="https://amonchik8.github.io/exam/">Bhromaon</a>
+        <a class="logo footer__logo" href="https://amonchik8.github.io/Bhromaon/">Bhromaon</a>
         <h3 class="footer__subtitle">Safe Travel Anywhere</h3>
         <ul class="social">
             <li class="social__item">
