--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -17,7 +17,7 @@
   <div class="header__menu">
     <div class="container">
   <div class="header__nav-wrapper">
-    <a class="logo header__logo" href="https://amonchik8.github.io/exam/">bhromaon</a>
+    <a class="logo header__logo" href="https://amonchik8.github.io/Bhromaon/">bhromaon</a>
     <nav>
    <ul class="nav">
     <li class="nav__item">
